ingress_demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    url: root
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    url: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
